Use ImmutableSet for constructing state sets